--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,11 @@ target/
 .kotlin
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
+
 
 ### Eclipse ###
 .apt_generated
